<resources>
    <string name="app_name">CrypTxt</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="LOGIN_PREFS">uw.edu.tcss450.team6.cryptxt.PREFS</string>
    <string name="LOGGEDIN">loggedin</string>
    <string name="LOGIN_FILE"> uw.edu.tcss450.team6.cryptxt.LOGIN_FILE</string>

    <string-array name="cipher_array">
        <item>Shift</item>
        <item>Vigenere</item>
        <item>Substitution</item>
        <item>Permutation</item>
        <item>Advanced</item>
    </string-array>

    <string name="helpString">
    Cryptography: Using mathematics to alter messages to hide their meaning.\n\nEncryption: Using a Cryptographic function to hide words going from plaintext to ciphertext.\n\nDecryption: Using a Cryptographic function to reveal hidden words going from ciphertext to plaintext.\n\nKey: The combination of words or letters that are used to encrypt or decrypt the message.\n\nCloud: A reference to being saved on the server.\n\nPlaintext: Text that has not been encrypted and can be read by a human.\n\nCiphertext: Text that has been encrypted and cannot yet be read by a human.\n\nCipher Alphabet: Numbers corresponding to each letter, such as:\n
    \ta b c d e f … z\n
    \t0 1 2 3 4 5 … 25\n\nShift Cipher: An encryption method that shifts each plaintext letters by a certain number of characters,
        specified by the key from the cipher alphabet
    (a=0, b=1, c=2, … z=25). For example, the letter ‘j’ shifted by 3, would result in the letter ‘m’ in ciphertext. (Shifting characters past ‘z’ loops back through the alphabet.)\n\nVigenère Cipher: An encryption method that uses a word as the key, with each letter in the key indicating the amount to shift each character in the plaintext.
    (key: banana = 1, 0, 13, 0, 13, 0 would shift the first letter in the plaintext by 1, second letter by 0, third by 13, etc., and on the 7th letter shifting it by the letter ‘b’ again (loops through the key).\n\nSubstitution Cipher: An encryption method that swaps each letter of an alphabet with another letter, such as below would change ‘a’ to ‘z’, ‘h’ to ‘s’, etc.:\n
    \ta b c d e f g h i j k l m n o p q r s t u v w x y z\n\tz y x w v u t s r q p o n m l k j i h g f e d c b a\n\nPermutation Cipher: An encryption method that swaps the placement of letters in a certain pattern (for example, put the 1st letter in the 4th position, 2nd letter in
    the 6th position, etc.) If the key is {3,5,1,6,4,2}, then “thread” would encrypt to “ratdeh” with ‘t’ becoming the 3rd letter, ‘h’ becoming the 5th, etc.\n\nAdvanced Cipher: A combination encryption method that combines the substitution and permutation ciphers for extra security.\n
    </string>

    <string name="Home_Title">Home</string>
    <string name="Inbox_Title">Inbox</string>
    <string name="Contacts_Title">Contacts</string>
    <string name="Help_Title">Help</string>
    <string name="Receive_Title">Receive</string>
    <string name="Send_Title">Send</string>
    <string name="Share_Title">Share</string>

    <string name="to">To: </string>
    <string name="email_hint">Enter Recipient Email</string>
    <string name="subject_hint">Enter Subject</string>
    <string name="subject">Subject:</string>
    <string name="message">Message:</string>
    <string name="email_placeholder">Check out this new app called CrypTxt it\'s an encrypted messaging service! (insert download link)</string>
    <string name="share">Share</string>
    <string name="phone_hint">Enter Recipient Phone #</string>




</resources>
