<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="uw.edu.tcss450.team6.cryptxt.ShareActivity"
    android:background="@color/background">

    <TextView
        android:id="@+id/email_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to"
        android:textColor="@color/textColor"/>

    <EditText
        android:id="@+id/email_recipient"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_to"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:backgroundTint="@color/colorPrimaryDark"/>

    <TextView
        android:id="@+id/email_subject"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_recipient"
        android:text="@string/subject"
        android:textColor="@color/textColor"/>

    <EditText
        android:id="@+id/recipient_subject"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_subject"
        android:hint="@string/subject_hint"
        android:backgroundTint="@color/colorPrimaryDark"/>

    <TextView
        android:id="@+id/email_message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/recipient_subject"
        android:text="@string/message"
        android:textColor="@color/textColor"/>

    <EditText
        android:id="@+id/body"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_message"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/email_placeholder"/>

    <Button
        android:id="@+id/email_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share"
        android:layout_below="@+id/body"
        android:layout_centerHorizontal="true"
        android:background="@color/buttonColor"/>

    <TextView
        android:id="@+id/sms_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_button"
        android:text="@string/to"
        android:textColor="@color/textColor"/>

    <EditText
        android:id="@+id/sms_recipient"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sms_to"
        android:hint="@string/phone_hint"
        android:inputType="phone"
        android:backgroundTint="@color/colorPrimaryDark"/>


    <TextView
        android:id="@+id/sms_message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sms_recipient"
        android:text="@string/message"
        android:textColor="@color/textColor"/>

    <EditText
        android:id="@+id/sms_body"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sms_message"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/email_placeholder"/>

    <Button
        android:id="@+id/sms_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share"
        android:layout_below="@+id/sms_body"
        android:layout_centerHorizontal="true"
        android:background="@color/buttonColor"/>
</RelativeLayout>
